# compresswitch

./: README.md  compresswitch.spec  gi_runtime_hook.py  pyproject.toml
.github/workflows/: release.yml
data/: com.github.dan.compresswitch.desktop
src/compresswitch/: file_queue.py  main.py  utils.py  window.py  worker.py
